Modified CardDeck class
Added JavaDoc
Added Iterator for cards